--- a/static/css/chatbox.css
+++ b/static/css/chatbox.css
@@ -92,7 +92,7 @@ body {
     align-items: flex-start;
 }
 
-.chat-form textarea {
+.chat-form #typing {
     background: #fbfbfb;
     width: 75%;
     height: 70px;
@@ -103,19 +103,19 @@ body {
     font-size: 18px;
     color: #333;
 }
-.chat-form textarea::-webkit-scrollbar {
+.chat-form #typing::-webkit-scrollbar {
     width: 10px;
 }
-.chat-form textarea::-webkit-scrollbar-thumb {
+.chat-form #typing::-webkit-scrollbar-thumb {
     border-radius: 5px;
     background: rgba(0, 0, 0, 0.1)
 }
 
-.chat-form textarea:focus {
+.chat-form #typing:focus {
     background: #fff
 }
 
-.chat-form button {
+.chat-form #send-message {
     background: #1ddced;
     padding: 5px 15px;
     color: #fff;
@@ -132,6 +132,6 @@ body {
 
 }
 
-.chat-form button {
+.chat-form #send-message {
     background: #13c8d9;
 }
