--- a/templates/chatbox.html
+++ b/templates/chatbox.html
@@ -24,14 +24,14 @@
 
         </div>
 
-        <form action="" class="chat-form" id="chat-form">
+        <!-- <form action="" class="chat-form" id="chat-form">
             <input type="text" name="message" id="typing" placeholder="Type something ...">
             <input type="submit" id="send-message" value="Send">
-        </form>
-        <!-- <div class="chat-form">
+        </form> -->
+        <div class="chat-form">
             <textarea id="typing" placeholder='Type'></textarea>
             <button id="send-message">Send</button>
-        </div> -->
+        </div>
 
     </div>
 
